# aether-platform

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile
backend/aether-hypervisor/: Cargo.toml  justfile
backend/aether-hypervisor/src/: config.rs  dtos.rs  http.rs  ipam.rs  main.rs  network.rs
migrations/: 20260115054222_create_vms_table.sql  20260119000000_create_snapshots_table.sql  20260119120000_add_snapshot_lineage.sql  20260119130000_add_cascade_delete_snapshots.sql  20260119140000_make_mem_file_path_nullable.sql  20260120000000_add_snapshot_name.sql  20260120010000_add_snapshot_type.sql  20260120020000_fix_snapshot_lineage_cascade.sql
src/: cgroups.rs  client.rs  config.rs  dtos.rs  firewall.rs  ipam.rs  main.rs  monitor.rs  network.rs
src/routes/: mod.rs  snapshots.rs  system.rs  vms.rs  ws.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/components/: CpuGraph.jsx  DashboardLayout.jsx  DeployModal.jsx  Header.jsx  LogTerminal.jsx  LogsPanel.jsx  MainStatsOverview.jsx  SnapshotsView.jsx  StatsCards.jsx  SystemInfo.jsx  VmCard.jsx  VmDetailPanel.jsx  VmList.jsx  VmListCompact.jsx
ui/src/context/: TelemetryContext.jsx
ui/src/hooks/: useWebSocket.js
