[package]
name = "aether-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
caps = "0.5.6"
axum = { version = "0.8.8", features = ["ws"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "migrate", "chrono"] }
dotenvy = "0.15.7"
uuid = { version = "1.19", features = ["serde", "v4"] }
lazy_static = "1.5"
chrono = "0.4"

# Native networking APIs
nix = { version = "0.29", features = ["ioctl", "net", "user", "fs"] }
rtnetlink = "0.14"
futures-util = "0.3"
ipnetwork = "0.20"
libc = "0.2"
iptables = "0.6.0"

# Real-time telemetry
tokio-stream = "0.1"
