[package]
name = "aether-hypervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
caps = "0.5.6"
axum = "0.8.8"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "migrate"] }
dotenvy = "0.15.7"
uuid = { version = "1.19", features = ["serde", "v4"] }
